crates/builder/src/typechecker/snapshots/with_auth_context_use_in_field_annotation.snap
---
source: crates/builder/src/typechecker/mod.rs
expression: built
---
types:
  values:
    - - ~
      - Primitive:
          Plain: Boolean
    - - ~
      - Primitive:
          Plain: Int
    - - ~
      - Primitive:
          Plain: Float
    - - ~
      - Primitive:
          Plain: Decimal
    - - ~
      - Primitive:
          Plain: String
    - - ~
      - Primitive:
          Plain: LocalTime
    - - ~
      - Primitive:
          Plain: LocalDateTime
    - - ~
      - Primitive:
          Plain: LocalDate
    - - ~
      - Primitive:
          Plain: Instant
    - - ~
      - Primitive:
          Plain: Json
    - - ~
      - Primitive:
          Plain: Blob
    - - ~
      - Primitive:
          Plain: Uuid
    - - ~
      - Primitive:
          Plain: Vector
    - - ~
      - Injected: Exograph
    - - ~
      - Injected: ExographPriv
    - - ~
      - Injected:
          Operation: Operation
    - - ~
      - Composite:
          name: AuthContext
          kind: Context
          fields:
            - name: role
              typ:
                Plain:
                  - ~
                  - String
                  - []
                  - true
              annotations:
                annotations:
                  jwt:
                    name: jwt
                    params: None
              default_value: ~
              doc_comments: ~
          fragment_references: []
          annotations:
            annotations: {}
          doc_comments: ~
    - - ~
      - Composite:
          name: Doc
          kind: Type
          fields:
            - name: is_public
              typ:
                Plain:
                  - ~
                  - Boolean
                  - []
                  - true
              annotations:
                annotations: {}
              default_value: ~
              doc_comments: ~
            - name: content
              typ:
                Plain:
                  - ~
                  - String
                  - []
                  - true
              annotations:
                annotations:
                  access:
                    name: access
                    params:
                      Single:
                        - AccessExpr:
                            LogicalOp:
                              Or:
                                - RelationalOp:
                                    Eq:
                                      - FieldSelection:
                                          Select:
                                            - Single:
                                                - Identifier:
                                                    - AuthContext
                                                    - Reference:
                                                        index: 16
                                                        generation: ~
                                                - Reference:
                                                    index: 16
                                                    generation: ~
                                            - Identifier:
                                                - role
                                                - Defer
                                            - Reference:
                                                index: 4
                                                generation: ~
                                      - Literal:
                                          String:
                                            - ROLE_ADMIN
                                      - Primitive:
                                          Plain: Boolean
                                - FieldSelection:
                                    Select:
                                      - Single:
                                          - Identifier:
                                              - self
                                              - Reference:
                                                  index: 17
                                                  generation: ~
                                          - Reference:
                                              index: 17
                                              generation: ~
                                      - Identifier:
                                          - is_public
                                          - Defer
                                      - Reference:
                                          index: 0
                                          generation: ~
                                - Primitive:
                                    Plain: Boolean
              default_value: ~
              doc_comments: ~
          fragment_references: []
          annotations:
            annotations: {}
          doc_comments: ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
    - ~
  map:
    AuthContext:
      index: 16
      generation: ~
    Blob:
      index: 10
      generation: ~
    Boolean:
      index: 0
      generation: ~
    Decimal:
      index: 3
      generation: ~
    Doc:
      index: 17
      generation: ~
    Exograph:
      index: 13
      generation: ~
    ExographPriv:
      index: 14
      generation: ~
    Float:
      index: 2
      generation: ~
    Instant:
      index: 8
      generation: ~
    Int:
      index: 1
      generation: ~
    Json:
      index: 9
      generation: ~
    LocalDate:
      index: 7
      generation: ~
    LocalDateTime:
      index: 6
      generation: ~
    LocalTime:
      index: 5
      generation: ~
    Operation:
      index: 15
      generation: ~
    String:
      index: 4
      generation: ~
    Uuid:
      index: 11
      generation: ~
    Vector:
      index: 12
      generation: ~
modules:
  values:
    - - ~
      - name: DocumentModule
        annotations:
          annotations:
            postgres:
              name: postgres
              params: None
        types:
          - name: Doc
            kind: Type
            fields:
              - name: is_public
                typ:
                  Plain:
                    - ~
                    - Boolean
                    - []
                    - true
                annotations:
                  annotations: {}
                default_value: ~
                doc_comments: ~
              - name: content
                typ:
                  Plain:
                    - ~
                    - String
                    - []
                    - true
                annotations:
                  annotations:
                    access:
                      name: access
                      params:
                        Single:
                          - AccessExpr:
                              LogicalOp:
                                Or:
                                  - RelationalOp:
                                      Eq:
                                        - FieldSelection:
                                            Select:
                                              - Single:
                                                  - Identifier:
                                                      - AuthContext
                                                      - Reference:
                                                          index: 16
                                                          generation: ~
                                                  - Reference:
                                                      index: 16
                                                      generation: ~
                                              - Identifier:
                                                  - role
                                                  - Defer
                                              - Reference:
                                                  index: 4
                                                  generation: ~
                                        - Literal:
                                            String:
                                              - ROLE_ADMIN
                                        - Primitive:
                                            Plain: Boolean
                                  - FieldSelection:
                                      Select:
                                        - Single:
                                            - Identifier:
                                                - self
                                                - Reference:
                                                    index: 17
                                                    generation: ~
                                            - Reference:
                                                index: 17
                                                generation: ~
                                        - Identifier:
                                            - is_public
                                            - Defer
                                        - Reference:
                                            index: 0
                                            generation: ~
                                  - Primitive:
                                      Plain: Boolean
                default_value: ~
                doc_comments: ~
            fragment_references: []
            annotations:
              annotations: {}
            doc_comments: ~
        enums: []
        methods: []
        interceptors: []
        base_exofile: input.exo
        doc_comments: ~
    - ~
    - ~
    - ~
  map:
    DocumentModule:
      index: 0
      generation: ~
declaration_doc_comments: ~
